# ai-cronjobs

./: .editorconfig  .gitattributes  .gitignore  README.md  format  pyproject.toml
ai_cronjobs/: .env.example  watch-sk-version.py  watch-sk-version.sh  watch-stock1.py  watch-stock1.sh
ai_cronjobs/lib/: ai.py  files.py  http.py  notifications.py
macos/: crons.sh  notify.sh
